<resources>
    <string name="app_name">Medical Supplies Delivery</string>
    <string name="open">Open_Drawer</string>
    <string name="close">Close_Drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="upload_image">Upload Image</string>
    <string name="complete_registration">Complete Registration</string>
    <string name="login">Login</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="login_t">Login</string>
    <string name="remember_me">Remember Me</string>
    <string name="create_account">Create Account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register">Register</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_fullname">Enter FullName</string>
    <string name="enter_phonenumber">Enter PhoneNumber</string>
    <string name="language">Language</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="set_profile_image">Set Profile Image</string>
    <string name="back_to_login_page">Back to Login Page</string>
    <string name="delivery_in">Delivery in:</string>
    <string name="face_mask">Face Mask</string>
    <string name="ksh_10_000">Ksh 10,000</string>
    <string name="order_id">Order Id :</string>
    <string name="amount_paid">Amount Paid :</string>
    <string name="completed">Completed</string>
    <string name="payment_not_successful">Payment Not Successful</string>
    <string name="please_check_balance">Please check Balance</string>
    <string name="username_p">Username</string>
    <string name="full_name_p">Full Name</string>
    <string name="phone_no_p">Phone No.</string>
    <string name="language_p">Language</string>
    <string name="date_of_birth_p">Date of Birth</string>
    <string name="gender_p">Gender</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_cart">My Cart</string>
    <string name="no_items_found">No items Found</string>
    <string name="total">Total</string>
    <string name="taxes">+Taxes</string>
    <string name="delivery_charges">+ Delivery Charges</string>
    <string name="payable_amount">Payable Amount</string>
    <string name="order_now">Order now</string>
    <string name="laboratory">Laboratory</string>
    <string name="surgery">Surgery</string>
    <string name="sterilization">Sterilization</string>
    <string name="maternity">Maternity</string>
    <string name="see_all">See All</string>
    <string name="popular">Popular</string>
    <string name="new_arrivals">New Arrivals</string>
    <string name="no_complete_orders">No Complete Orders</string>
    <string name="facial_masks">Facial Masks</string>
    <string name="select_quantity">Select Quantity</string>
    <string name="total_d">Total</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="no_favourites">No Favourites</string>
    <string name="no_pending_orders">No Pending Orders</string>
    <string name="email">email</string>
    <string name="_9">+9</string>
    <string name="order_id_pe">Order Id :</string>
    <string name="amount_paid_pe">Amount Paid :</string>
    <string name="pending">Pending...</string>
    <string name="select_payment_method">Select Payment Method</string>
    <string name="mpesa">Mpesa</string>
    <string name="paypal">Paypal</string>
    <string name="pay_on_delivery">Pay on Delivery</string>
    <string name="_30_off">30% OFF</string>
    <string name="_4_9">4.9</string>
    <string name="_30_40_mins">30-40 mins</string>
    <string name="stethoscope">Stethoscope</string>
    <string name="_800">$800</string>
    <string name="edit_profile_e">Edit Profile</string>
    <string name="full_name_e">Full Name</string>
    <string name="phone_no_e">Phone No</string>
    <string name="language_e">Language</string>
    <string name="date_of_birth_e">Date of Birth</string>
    <string name="gender_e">Gender</string>
    <string name="male_e">Male</string>
    <string name="save">Save</string>
    <string name="payment_successful">Payment Successful</string>
    <string name="delivery_in_process">Delivery in Process</string>
    <string name="track_order">Track Order</string>
    <string name="_5000">$5000</string>
</resources>
