<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bl"
    tools:context=".ActivitiesClasses.Login">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textStyle="bold"
        android:textColor="@color/orange"
        android:textSize="25sp"
        android:fontFamily="@font/nunitobold"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        />
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/picture3"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"

        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_marginTop="20dp"
        >
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/orange"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_email"
                android:textColor="@color/orange"
                android:inputType="textEmailAddress"
                android:fontFamily="@font/nunitobold"
                android:backgroundTint="@color/orange"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:textColorHint="@color/orange"
            app:passwordToggleTint="@color/orange"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password"
                android:maxLines="1"
                android:textColor="@color/orange"
                android:inputType="textPassword"
                android:fontFamily="@font/nunitobold"
                android:backgroundTint="@color/orange"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_t"
            android:background="@drawable/card_corner_back"
            android:textColor="@color/orange"
            android:fontFamily="@font/nunitobold"
            android:layout_marginTop="10dp"
            />
        <CheckBox
            android:id="@+id/checkboxLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_me"
            android:textColor="@color/orange"
            android:fontFamily="@font/nunitobold"
            android:outlineSpotShadowColor="@color/orange"
            android:layout_marginTop="5dp"
            android:buttonTint="@color/orange"
            />
        <TextView
            android:id="@+id/account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:textColor="@color/orange"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/nunitobold"
            />
        <TextView
            android:id="@+id/forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/orange"
            android:fontFamily="@font/nunitobold"
            android:layout_gravity="end"
            android:layout_marginTop="-59dp"
            />

    </LinearLayout>

</LinearLayout>