<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/bl"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/logomed"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile_e"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/orange"
        android:fontFamily="@font/nunitobold"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        >
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Username"
            android:textColorHint="@color/orange"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/usernameEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/orange"
                android:fontFamily="@font/nunitobold"
                android:textColorHint="@color/orange"
                android:backgroundTint="@color/orange"
                android:maxLines="1"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/full_name_e"
            android:textColorHint="@color/orange"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fullNameEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/orange"
                android:fontFamily="@font/nunitobold"
                android:textColorHint="@color/orange"
                android:backgroundTint="@color/orange"
                android:maxLines="1"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_no_e"
            android:textColorHint="@color/orange"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phoneEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/orange"
                android:fontFamily="@font/nunitobold"
                android:textColorHint="@color/orange"
                android:backgroundTint="@color/orange"
                android:maxLines="1"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/language_e"
            android:textColorHint="@color/orange"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/langaugeEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/orange"
                android:fontFamily="@font/nunitobold"
                android:textColorHint="@color/orange"
                android:backgroundTint="@color/orange"
                android:maxLines="1"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:hint="@string/date_of_birth_e"
            android:textColorHint="@color/orange"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dateEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/orange"
                android:fontFamily="@font/nunitobold"
                android:textColorHint="@color/orange"
                android:backgroundTint="@color/orange"
                android:maxLines="1"
                android:clickable="true"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <ImageView
            android:id="@+id/imgEdit"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_event_note_black_24dp"
            android:layout_marginTop="-30dp"
            android:layout_gravity="end"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender_e"
            android:textColor="@color/orange"
            android:fontFamily="@font/nunitobold"
            android:textSize="19sp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="6dp"
            />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/genderEdit"
            >

            <RadioButton
                android:id="@+id/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/orange"
                android:fontFamily="@font/nunitobold"
                android:text="@string/male_e"
                android:textColor="@color/orange" />
            <RadioButton
                android:id="@+id/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:textColor="@color/orange"
                android:fontFamily="@font/nunitobold"
                android:buttonTint="@color/orange"
                />
        </RadioGroup>

        <Button
            android:id="@+id/btnEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textColor="@color/orange"
            android:background="@drawable/card_corner_back"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/nunitobold"
            android:layout_marginBottom="20dp"
            />

    </LinearLayout>


</LinearLayout>