<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/bl"
    android:layout_height="wrap_content">
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/logomed"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_check_circle_black_24dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="90dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment_successful"
        android:textColor="@color/orange"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/nunitobold"
        android:textSize="20sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delivery_in_process"
        android:textColor="@color/orange"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/nunitobold"
        android:textSize="15sp"
        android:layout_marginBottom="20dp"
        />

    <Button
        android:id="@+id/track"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/track_order"
        android:textColor="@color/orange"
        android:background="@drawable/card_corner_back"
        android:fontFamily="@font/nunitobold"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="90dp"
        />


</LinearLayout>