<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/splash"
    tools:context=".ActivitiesClasses.Register">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolRegister"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <ImageView
                android:id="@+id/imgBackRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_back_black_24dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                />
        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="@color/orange"
                android:fontFamily="@font/nunitobold"
                android:layout_gravity="center_horizontal"
                android:textSize="25sp"
                android:layout_marginTop="1dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"

                >
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextColor="@color/orange"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emailRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_email"
                        android:fontFamily="@font/nunitobold"
                        android:textColor="@color/orange"
                        android:backgroundTint="@color/orange"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextColor="@color/orange"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/usernameReg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_username"
                        android:textColor="@color/orange"
                        android:fontFamily="@font/nunitobold"
                        android:backgroundTint="@color/orange"
                        android:maxLines="1"
                        android:inputType="text"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextColor="@color/orange"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nameRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_fullname"
                        android:textColor="@color/orange"
                        android:fontFamily="@font/nunitobold"
                        android:backgroundTint="@color/orange"
                        android:maxLines="1"
                        android:inputType="text"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextColor="@color/orange"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phoneRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_phonenumber"
                        android:textColor="@color/orange"
                        android:fontFamily="@font/nunitobold"
                        android:backgroundTint="@color/orange"
                        android:maxLines="1"
                        android:inputType="text"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextColor="@color/orange"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/languageRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/language"
                        android:textColor="@color/orange"
                        android:fontFamily="@font/nunitobold"
                        android:backgroundTint="@color/orange"
                        android:maxLines="1"
                        android:inputType="text"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextColor="@color/orange"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/dateRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/date_of_birth"
                        android:textColor="@color/orange"
                        android:fontFamily="@font/nunitobold"
                        android:backgroundTint="@color/orange"
                        android:maxLines="1"
                        android:inputType="text"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <ImageView
                    android:id="@+id/imgRegister"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_event_note_black_24dp"
                    android:layout_marginTop="-30dp"
                    android:layout_gravity="end"

                    />
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                    app:hintTextColor="@color/orange"
                    android:layout_marginTop="10dp"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passwordRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_password"
                        android:textColor="@color/orange"
                        android:fontFamily="@font/nunitobold"
                        android:backgroundTint="@color/orange"
                        android:maxLines="1"
                        android:inputType="textPassword"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:fontFamily="@font/nunitobold"
                    android:textSize="19sp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="6dp"
                    />
                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/genderRegister"
                    >
                    <RadioButton
                        android:id="@+id/maleR"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/male"
                        android:textColor="@color/orange"
                        android:fontFamily="@font/nunitobold"
                        android:buttonTint="@color/orange"
                        />
                    <RadioButton
                        android:id="@+id/femaleR"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/female"
                        android:textColor="@color/orange"
                        android:fontFamily="@font/nunitobold"
                        android:buttonTint="@color/orange"
                        />
                </RadioGroup>

                <Button
                    android:id="@+id/btnRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/set_profile_image"
                    android:background="@color/orange"
                    android:textColor="@android:color/white"
                    android:fontFamily="@font/nunitobold"
                    android:layout_marginTop="10dp"
                    />
                <TextView
                    android:id="@+id/txtBackLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/back_to_login_page"
                    android:textColor="@color/orange"
                    android:fontFamily="@font/nunitobold"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>







</LinearLayout>