<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/linearPop"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <ImageView
                android:id="@+id/imagePopular"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/med5"
                android:scaleType="fitXY"
                />
            <TextView
                android:layout_width="100dp"
                android:layout_height="25dp"
                android:text="@string/_30_off"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                android:textColor="@android:color/white"
                android:background="@android:color/holo_red_dark"
                android:textAlignment="center"
                android:paddingTop="2dp"
                android:fontFamily="@font/nunitobold"
                android:textStyle="bold"
                android:gravity="center_horizontal" />
            <RelativeLayout
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:background="@drawable/circle_fav"
                android:layout_marginRight="5dp"
                android:layout_marginTop="110dp">
                <com.like.LikeButton
                    android:id="@+id/likePop"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:like_drawable="@drawable/ic_favorite_black"
                    app:unlike_drawable="@drawable/ic_favorite_border_black_24dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    />
            </RelativeLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        >
        <TextView
            android:id="@+id/titlePopular"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:text="@string/stethoscope"
            android:textSize="17sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:fontFamily="@font/nunitobold"
            android:maxLines="1"
            android:ellipsize="end"
            />

        <ImageView
            android:id="@+id/rateImage"
            android:layout_width="25dp"
            android:layout_height="20dp"
            android:src="@drawable/star_black"
            android:layout_below="@id/titlePopular"
            android:layout_marginTop="1dp"
            />
        <TextView
            android:id="@+id/ratePop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_4_9"
            android:layout_below="@id/titlePopular"
            android:layout_toRightOf="@id/rateImage"
            android:textSize="15sp"
            android:fontFamily="@font/nunitobold"
            android:paddingLeft="5dp"
            android:layout_marginTop="-1dp"
            />
        <ImageView
            android:id="@+id/clock"
            android:layout_width="20dp"
            android:layout_height="23dp"
            android:src="@drawable/ic_access_time_black_24dp"
            android:layout_toRightOf="@id/ratePop"
            android:layout_below="@id/titlePopular"
            android:layout_marginLeft="30dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_30_40_mins"
            android:layout_below="@id/titlePopular"
            android:layout_toRightOf="@id/clock"
            android:fontFamily="@font/nunitobold"
            android:paddingLeft="10dp"
            android:textSize="15sp"
            />
    </RelativeLayout>

</LinearLayout>